# AliceO2

./: CMakeLists.txt
Base/: BaseLinkDef.h  CMakeLists.txt  DataHeader.cxx  DataHeader.h
DataFormats/Headers/include/Headers/: DataHeader.h
DataFormats/Headers/src/: DataHeader.cxx
Examples/: CMakeLists.txt
Examples/SharedMemory/: CMakeLists.txt
Examples/SharedMemory/include/ShmSource/: ShmSink.h  ShmSource.h
Examples/SharedMemory/src/: ShmSink.cxx  ShmSource.cxx
Examples/SharedMemory/test/: clear.cxx  make  shmReceiver.cxx  shmSender.cxx
Framework/Core/src/: DataAllocator.cxx
Framework/TestWorkflows/: CMakeLists.txt
Framework/TestWorkflows/src/: o2DataTypes.cxx  o2ParallelCompressor.cxx
Utilities/: CMakeLists.txt
Utilities/DataFlow/: CMakeLists.txt
Utilities/DataFlow/src/: TimeframeParser.cxx
Utilities/FileSink/: CMakeLists.txt
Utilities/FileSink/include/Analysis/: Analysis.h
Utilities/FileSink/include/FileSink/: FileSink.h
Utilities/FileSink/include/GenerateData/: GenerateData.h
Utilities/FileSink/src/: Analysis.cxx  FileSink.cxx  GenerateData.cxx  runAnalysis.cxx  runGenerateData.cxx
Utilities/FileSink/test/: Analysis.json  FileSink.json  GenerateData.json  runFileSink.sh
Utilities/O2Device/: CMakeLists.txt
Utilities/O2Device/include/O2Device/: O2Device.h  SharedMemory.h
Utilities/O2Device/src/: SharedMemory.cxx
Utilities/O2Device/test/: test_O2Device.cxx
Utilities/O2MessageMonitor/src/: O2MessageMonitor.cxx
Utilities/O2MessageMonitor/test/: O2MessageMonitor.json
Utilities/Publishers/: CMakeLists.txt
Utilities/fileSink/include/fileSink/: FileSink.h
Utilities/fileSink/src/: FileSink.cxx  runFileSink.cxx
cmake/: O2Dependencies.cmake
macro/: load_all_libs.C
